[tool.poetry]
name = "superset-server"
version = "0.1.0"
description = "Apache Superset Server"
authors = ["Park Jimin"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
apache-superset = {extras = ["sqlite"], version = "^5.0.0"}
marshmallow = "<4"
sqlalchemy = "<2"
pyarrow = "<15"
werkzeug = "<3"
flask = "<3"
psycopg2-binary = "^2.9.11"
pillow = "^12.0.0"
reportlab = "^4.4.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

